# shopee-product-matching

./: .dvcignore  .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
conf/: config.yaml  data.yaml  image_model.yaml  mlflow.yaml  text_model.yaml  train.yaml
mlops_hw/data/: preprocess_data.py
mlops_hw/models/: joint_model.py  text_models.py
mlops_hw/training/: train.py
shopee_product_matching/data/: data.py  datamodule.py  preprocess_data.py
shopee_product_matching/models/: image_model.py  joint_model.py  text_models.py
shopee_product_matching/training/: train.py
